--- a/pom.xml
+++ b/pom.xml
@@ -352,6 +352,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-data</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.0</version>
+        </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
         <!-- For creating excel sheets-->
     </dependencies>
