--- a/pom.xml
+++ b/pom.xml
@@ -357,6 +357,11 @@
             <artifactId>opencsv</artifactId>
             <version>4.0</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.supercsv</groupId>
+            <artifactId>super-csv</artifactId>
+            <version>2.1.0</version>
+        </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
         <!-- For creating excel sheets-->
     </dependencies>
