--- a/pom.xml
+++ b/pom.xml
@@ -362,6 +362,11 @@
             <artifactId>super-csv</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-csv</artifactId>
+            <version>2.5.3</version>
+        </dependency>
         <!-- jhipster-needle-maven-add-dependency -->
         <!-- For creating excel sheets-->
     </dependencies>
